dom is updating correctly but one booking behind current is showing

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -24,6 +24,11 @@ body {
   width: 20vw;
 }
 
+.currentBookings {
+  height: 90vh;
+  width: 22vw;
+  overflow-y: scroll;
+}
 .calendar {
 display: flex;
 flex-direction: column;
